# imageAlgorithmViewer

./: .gitmodules  CMakeLists.txt  readme.md
include/: CMakeLists.txt
src/: CMakeLists.txt  image.h  main.cpp  myfont.cpp  style.h
